Doc and dependency changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ resolver = "2"
 
 [workspace.package]
 version = "0.1.0"
-authors = ["HanshiroDB Team"]
-edition = "2021"
+authors = ["Sarthak Munshi <s@hanshiro.dev>"]
+edition = "2026"
 rust-version = "1.75.0"
 license = "Apache-2.0"
-repository = "https://github.com/hanshirodb/hanshirodb"
+repository = "https://github.com/hanshiro-dev/hanshirodb"
 
 [workspace.dependencies]
 # Core dependencies
