--- a/hanshiro-ingest/Cargo.toml
+++ b/hanshiro-ingest/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hanshiro-core"
+name = "hanshiro-ingest"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -7,7 +7,7 @@ rust-version.workspace = true
 license.workspace = true
 
 [dependencies]
-# Core dependencies
+hanshiro-core = { path = "../hanshiro-core" }
 async-trait = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
@@ -17,24 +17,6 @@ bytes = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 
-# Cryptography
-blake3 = { workspace = true }
-crc32fast = { workspace = true }
-ring = "0.17"
-
-# Time handling
-chrono = { version = "0.4", features = ["serde"] }
-
-# UUID generation
-uuid = { version = "1.10", features = ["v4", "serde"] }
-
-# Compression
-lz4 = "1.24"
-zstd = "0.13"
-
-# Additional dependencies
-hex = "0.4"
-
 [dev-dependencies]
+tempfile = { workspace = true }
 proptest = { workspace = true }
-quickcheck = { workspace = true }
