--- a/hanshiro-storage/Cargo.toml
+++ b/hanshiro-storage/Cargo.toml
@@ -37,6 +37,7 @@ crc32fast = { workspace = true }
 blake3 = { workspace = true }
 hex = "0.4"
 rmp-serde = "1.1"
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 tempfile = { workspace = true }
