--- a/hanshiro-storage/Cargo.toml
+++ b/hanshiro-storage/Cargo.toml
@@ -38,6 +38,7 @@ blake3 = { workspace = true }
 hex = "0.4"
 rmp-serde = "1.1"
 chrono = { version = "0.4", features = ["serde"] }
+rayon = "1.10"
 
 [dev-dependencies]
 tempfile = { workspace = true }
