--- a/hanshiro-storage/Cargo.toml
+++ b/hanshiro-storage/Cargo.toml
@@ -25,9 +25,9 @@ memmap2 = { workspace = true }
 crossbeam-skiplist = { workspace = true }
 dashmap = { workspace = true }
 parking_lot = "0.12"
+serde_bytes = "0.11"
 
 # Compression
-lz4 = "1.24"
 zstd = "0.13"
 snap = "1.1"
 
@@ -44,3 +44,4 @@ rayon = "1.10"
 tempfile = { workspace = true }
 proptest = { workspace = true }
 criterion = { workspace = true }
+rand = "0.8"
