--- a/hanshiro-storage/Cargo.toml
+++ b/hanshiro-storage/Cargo.toml
@@ -42,6 +42,7 @@ rayon = "1.10"
 crossbeam-channel = "0.5"
 crossbeam-utils = "0.8"
 libc = "0.2"
+lru = "0.12"
 
 [dev-dependencies]
 tempfile = { workspace = true }
