--- a/hanshiro-storage/Cargo.toml
+++ b/hanshiro-storage/Cargo.toml
@@ -43,6 +43,7 @@ crossbeam-channel = "0.5"
 crossbeam-utils = "0.8"
 libc = "0.2"
 lru = "0.12"
+num_cpus = "1.16"
 
 [dev-dependencies]
 tempfile = { workspace = true }
