feat: Add high-level API, polymorphic values, auto-correlation, and vector compaction
API (hanshiro-api):
- HanshiroClient with async event/code ingestion and retrieval
- EventBuilder and CodeArtifactBuilder for fluent construction
- Embedder trait for ML model integration (Bedrock, ONNX, etc.)
- Production test scenarios: malware detection, threat hunting,
  incident timeline, forensic correlation, multi-source correlation

Storage (hanshiro-storage):
- Polymorphic HanshiroValue enum (Log, Code, Index) with key prefixes
- CorrelationEngine for auto-correlation (vector similarity, hash match)
- Vector index compaction during SSTable merges
- Performance optimizations: MemTableKey Copy, cached timestamps,
  in-place vector normalization, serialization improvements
- ~25% throughput improvement (787K -> 980K events/sec)

Core (hanshiro-core):
- StorageKey and KeyPrefix for virtual table separation
- CodeArtifact struct for binary/script analysis
- IndexEntry for graph relationships
- Optimized rkyv serialization (into_vec vs to_vec)

Index (hanshiro-index):
- VectorIndexCompactor for merging .vidx files
- iter_entries() on VamanaIndex for compaction support
- FlatIndex insert optimization (avoid allocation)

Documentation:
- docs/API.md - Complete API reference with examples
- docs/DATA_MODEL.md - Storage internals and key structure

--- a/hanshiro-api/Cargo.toml
+++ b/hanshiro-api/Cargo.toml
@@ -6,6 +6,10 @@ edition.workspace = true
 rust-version.workspace = true
 license.workspace = true
 
+[lib]
+name = "hanshiro_api"
+path = "src/lib.rs"
+
 [[bin]]
 name = "hanshiro-api"
 path = "src/main.rs"
@@ -14,7 +18,6 @@ path = "src/main.rs"
 hanshiro-core = { path = "../hanshiro-core" }
 hanshiro-storage = { path = "../hanshiro-storage" }
 hanshiro-index = { path = "../hanshiro-index" }
-hanshiro-ingest = { path = "../hanshiro-ingest" }
 async-trait = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
@@ -23,12 +26,8 @@ serde_json = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 
-# API dependencies
-tonic = { workspace = true }
-tonic-reflection = { workspace = true }
-prost = { workspace = true }
-tower = { workspace = true }
-hyper = { workspace = true }
-
 [dev-dependencies]
 tempfile = { workspace = true }
+sha2 = "0.10"
+rand = "0.8"
+hex = "0.4"
