--- a/hanshiro-api/Cargo.toml
+++ b/hanshiro-api/Cargo.toml
@@ -11,7 +11,7 @@ name = "hanshiro_api"
 path = "src/lib.rs"
 
 [[bin]]
-name = "hanshiro-api"
+name = "hanshiro-server"
 path = "src/main.rs"
 
 [dependencies]
@@ -24,10 +24,18 @@ anyhow = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tracing = { workspace = true }
+tracing-subscriber = "0.3"
 tokio = { workspace = true }
+axum = "0.7"
+tower = { workspace = true }
+bytes = { workspace = true }
+hex = "0.4"
+reqwest = { version = "0.11", features = ["json"] }
+rkyv = "0.7"
 
 [dev-dependencies]
 tempfile = { workspace = true }
 sha2 = "0.10"
 rand = "0.8"
 hex = "0.4"
+reqwest = { version = "0.11", features = ["json"] }
